# jemoc-memory

./: .gitignore  LICENSE  README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
AppScope/: app.json5
jemoc_stream/src/main/cpp/: CMakeLists.txt  napi_init.cpp
jemoc_stream/src/main/cpp/binding/: StreamReaderBinding.h  TextReaderBinding.h  XmlReaderBinding.h
jemoc_stream/src/main/cpp/brotli/: BrotliStream.cpp
jemoc_stream/src/main/cpp/deflate/: DeflateStream.cpp  Deflater.cpp  Inflater.cpp
jemoc_stream/src/main/cpp/include/: Array.h  DeflateStream.h  Deflater.h  FileStream.h  IStream.h  Inflater.h  JSBinding.h  MemoryStream.h  ZipCryptoStream.h  common.h
jemoc_stream/src/main/cpp/include/binding/: AutoTraitsBuilder.h  DefaultJSBindingTraits.h  JSBinding.h
jemoc_stream/src/main/cpp/include/stream/: BrotliStream.h  DeflateStream.h  FileStream.h  MemfdStream.h  MemoryStream.h  SubReadStream.h
jemoc_stream/src/main/cpp/include/xml/: XmlReader.h
jemoc_stream/src/main/cpp/include/zip/: CheckSumAndSizeWriteStream.h  DirectToArchiveWriterStream.h  WrappedStream.h  ZipArchive.h  ZipArchiveEntry.h  ZipCryptoStream.h  ZipRecord.h  crypt.h
jemoc_stream/src/main/cpp/reader/: StreamReader.cpp
jemoc_stream/src/main/cpp/stream/: DeflateStream.cpp  FileStream.cpp  IStream.cpp  MemfdStream.cpp  MemoryStream.cpp  SubReadStream.cpp  ZipCryptoStream.cpp
jemoc_stream/src/main/cpp/types/libjemoc_stream/: Index.d.ts
jemoc_stream/src/main/cpp/zip/: CheckSumAndSizeWriteStream.cpp  ZipArchive.cpp  ZipArchiveEntry.cpp  ZipCryptoStream.cpp  ZipRecord.cpp
(+30 files in other folders)
